# codediff.nvim

./: CLAUDE.md  CMakeLists.txt  Makefile  README.md  build.cmd
.github/: CODEOWNERS
.github/workflows/: fork-stack.yml
benchmarks/: bootstrap.lua  diff.lua  fixtures.lua  harness.lua  normalize.lua  render.lua  report.lua  timeout.lua  workflows.lua
doc/: codediff.txt  tags
docs/: BENCHMARKS.md  README.md  native-gutter-signs-blocker.md  performance.md
docs/development/: codediff-line-wrapping-design.md
libvscode-diff/: CMakeLists.txt  build.cmd.in  build.sh.in  default_lines_diff_computer.c  diff_tool.c  libvscode_diff.def
libvscode-diff/include/: char_level.h  line_matcher.h  types.h
libvscode-diff/src/: char_level.c  line_matcher.c
libvscode-diff/tests/: test_char_level.c  test_compute_diff.c  test_line_matcher.c
lua/codediff/: commands.lua  config.lua  init.lua  line_matchers.lua  version.lua
lua/codediff/core/: async_diff.lua  compat.lua  diff.lua  git.lua  inline_worker.lua  inline_worker_child.lua  installer.lua  local_builder.lua  path.lua  virtual_file.lua
lua/codediff/nvim/: window_namespace.lua
lua/codediff/ui/: auto_refresh.lua  char_ranges.lua  core.lua  filler.lua  gutter_signs.lua  highlights.lua  inline.lua  keymap_help.lua  merge_alignment.lua  move.lua  semantic_tokens.lua  view_sync.lua  wrap_alignment.lua  wrap_alignment_model.lua  wrap_alignment_renderer.lua  wrap_view_sync.lua
patches/: 001-explorer-gf.patch  001-manual-build-libgomp.patch  002-move-keymap-scrolloff.patch  002-zero-hunk-navigation.patch  003-local-benchmarks.patch  003-safe-last-diff-close.patch  004-explorer-gf.patch  004-hide-native-tabline.patch  005-initial-explorer-selection.patch  005-special-file-highlights.patch  005-zero-hunk-navigation.patch  006-preserve-explorer-state.patch  006-safe-last-diff-close.patch  006-zero-hunk-navigation.patch  007-hide-native-tabline.patch  007-modified-line-highlights.patch  007-safe-last-diff-close.patch  007-special-file-highlights.patch  008-configurable-fillers.patch  008-hide-native-tabline.patch  008-ranged-line-highlights.patch  009-hide-native-tabline.patch  009-modified-line-highlights.patch  009-preserve-explorer-state.patch  009-special-file-highlights.patch  010-configurable-fillers.patch  010-highlight-attributes.patch  010-preserve-explorer-state.patch  010-special-file-highlights.patch  011-configurable-fillers.patch  011-explorer-line-statistics.patch  011-preserve-explorer-state.patch  012-configurable-fillers.patch  012-explorer-line-statistics.patch  012-highlight-attributes.patch  012-pure-line-char-highlights.patch  013-fork-notice.patch  013-highlight-attributes.patch  013-intraline-line-matching.patch  014-intraline-line-matching.patch  (+14 more)
plugin/: codediff.lua
scripts/: benchmark.sh  fork-stack
tests/: README.md  api_spec.lua  flatten_dirs_spec.lua  full_integration_spec.lua  helpers.lua
tests/core/: async_diff_spec.lua  ffi_integration_spec.lua  git_line_stats_spec.lua  inline_worker_spec.lua  line_matcher_spec.lua  line_matchers_spec.lua  local_builder_spec.lua  path_spec.lua  virtual_file_lsp_spec.lua  vscode_parity_spec.lua
tests/nvim/display/: architecture_spec.lua  events_spec.lua  layer_spec.lua  layout_spec.lua  viewport_spec.lua
tests/ui/: core_spec.lua  filler_spec.lua  gutter_signs_spec.lua  highlights_spec.lua  inline_spec.lua  inline_syntax_spec.lua  layout_spec.lua  merge_alignment_spec.lua  move_virtlines_spec.lua  welcome_spec.lua  wrap_alignment_model_spec.lua  wrap_invalidation_spec.lua  wrap_render_phase_spec.lua  wrap_session_ownership_spec.lua  wrap_smoothscroll_spec.lua  wrap_window_options_spec.lua
tests/ui/conflict/: conflict_dedup_spec.lua  issue_353_spec.lua  issue_387_spec.lua
tests/ui/explorer/: custom_keymaps_spec.lua  explorer_modules_spec.lua  explorer_refresh_spec.lua  explorer_spec.lua  explorer_staging_spec.lua  hunk_operations_spec.lua  inline_warm_spec.lua  issue_390_spec.lua  line_stats_spec.lua
tests/ui/lifecycle/: close_spec.lua  lifecycle_spec.lua
tests/ui/view/: autoscroll_spec.lua  compact_spec.lua  cycle_hunks_across_files_spec.lua  diffget_diffput_spec.lua  hunk_textobject_spec.lua  inline_explorer_spec.lua  inline_history_spec.lua  inline_interaction_spec.lua  inline_standalone_spec.lua  layout_toggle_spec.lua  (+4 more)
(+40 files in other folders)
